deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perepiski
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perepiski
  template:
    metadata:
      labels:
        app: perepiski
    spec:
      containers:
        - name: perepiski-back
          image: ghcr.io/hismaj3sty/fewd-svelte-back
          ports: 
          - containerPort: 81
            hostPort: 8081
        - name: perepiski-front
          image: ghcr.io/hismaj3sty/fewd-svelte-front
          ports:
          - containerPort: 80
            hostPort: 8080
