deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perepiski
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
    - port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: perepiski
