deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perepiski-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  defaultBackend: 
    service:
      name: perepiski
      port:
        number: 8080
  rules:
    - host: svelt.in.shadowy.space
      http:
        paths:              
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: perepiski-api
                port:
                  number: 8081
  tls:
    - hosts:
        - svelt.in.shadowy.space
      secretName: perepiski-ingress-secret
